# KoCS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  kocs.py  kocs.sh  main.cpp  run_all_examples.py  test.py  test.sh
.github/workflows/: docs.yml
benchmark/data_structure/: main.cpp  results.csv  vis.py
benchmark/gabriel/: main.cpp  naive_gabriel.hpp  pre_calc_distance_gabriel.hpp
benchmark/kernel_fusing/: main.cpp  results.csv  vis.py
benchmark/rng/: main.cpp  results.csv  vis.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/: apical_constriction.webm  bending_side.webm  bending_top.webm  branching_families.webm  branching_u.webm  branching_v.webm  epithelia_double_polarity_a.webm  epithelia_double_polarity_b.webm  epithelium.webm  gradient.webm  growth_w_squeeze.webm  growth_w_wall.webm  intercalation.webm  intercalation_w_gradient_f.webm  lineage_tracing_families.webm  lineage_tracing_generations.webm  migration.webm  polarization.webm  rotation.webm  sorting_engulfed.webm  sorting_mixed.webm  sorting_prot.webm  sorting_prot_links.webm  sorting_separated.webm  springs.webm  turing_polarity.webm  turing_u.webm  turing_v.webm
docs/examples/: index.rst
docs/getting-started/: index.rst  quick-start.rst  requirements.rst
docs/programming-guide/: forces.rst  index.rst  simulation-config.rst  simulation.rst
examples/: apical_constriction.cpp  bending.cpp  branching.cpp  epithelia_double_polarity.cpp  epithelium.cpp  gradient.cpp  growth_w_squeeze.cpp  growth_w_wall.cpp  intercalation.cpp  intercalation_w_gradient.cpp  lineage_tracing.cpp  migration.cpp  passive_growth.cpp  polarization.cpp  rotation.cpp  sorting.cpp  sorting_prot.cpp  springs.cpp  turing.cpp
examples/data/: sphere_ic.h5  vtk_to_h5.py
examples/tribolium/: main.cpp  serosa.h5  surface.h5
examples/tribolium/include/: forces.hpp
include/: kocs.hpp  polarity.hpp  runtime_guard.hpp  simulation.hpp  simulation_config.hpp  utils.hpp  vector.hpp
include/argparse/: arguments.hpp
include/com_fixers/: com_fixers.hpp
include/forces/: detail.hpp  kernel_fuser.hpp  predefined.hpp
include/initializers/: cuboid.hpp  disk.hpp  hexagon.hpp  line.hpp  random_spheres.hpp  rectangle.hpp  relax_force.hpp  spheres.hpp
include/integrators/: base.hpp  detail.hpp  euler.hpp  heun.hpp
include/io/: dummy.hpp  hdf5_reader.hpp  hdf5_writer.hpp  view.hpp  writer.hpp
include/pair_finders/: all_pairs.hpp  binned_all_pairs.hpp  binned_gabriel.hpp  gabriel.hpp  naive_all_pairs.hpp  naive_gabriel.hpp
include/types/: device_var.hpp  link.hpp  plane.hpp  polarity.hpp  var.hpp  vector.hpp  view.hpp
include/utils/: functions.hpp  grid.hpp  runtime_guard.hpp  utils.hpp
tests/: CMakeLists.txt  test_polarity.cpp  test_vector.cpp  tests_common.hpp
